--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,26 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.profile-picture {
+  width: 70%;
+  height: 100%;
+  object-fit: cover;
+  border: 1px solid black;
+}
+
+.actor-card {
+  border: 2px solid black;
+  background-color: rgb(0, 195, 255);
+  padding: 15px;
+  margin: 20px;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  align-content: center
+}
+
+.actors-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+}
