--- a/src/index.css
+++ b/src/index.css
@@ -17,23 +17,100 @@ code {
   height: 100%;
   object-fit: cover;
   border: 1px solid black;
-
+  border-radius: 4px;
 }
 
 .actor-card {
   border: 2px solid black;
-  background-color: rgb(0, 195, 255);
+  background-color: rgb(162, 251, 251);
   padding: 15px;
   margin: 20px;
   margin-left: 2vw;
   margin-right: 2vw;
-  align-content: center
+  align-content: center;
+  border-radius: 5px
+}
+
+#actor-show {
+  background-color:  rgb(162, 251, 251);
+  border: 2px solid black;
+  border-radius: 5px;
+  margin: 50px;
 }
 
 .actors-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  background-color: tomato
 }
 
+.topnav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.topnav-link {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav-link:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+
+.link {
+  color: #000000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.link:hover {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  /* border-radius: 20px; */
+}
+
+.App {
+  background-color: lightblue
+}
+
+#add-actor-form {
+  background-color: tomato
+}
+
+.button{
+  display:inline-block;
+  padding:0.35em 1.2em;
+  /* border:0.1em solid #FFFFFF; */
+  margin:0 0.3em 0.3em 0;
+  border-radius: 5px;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-family:'Roboto',sans-serif;
+  font-weight:300;
+  color:#f2defb;
+  background-color: rgb(71, 5, 71);
+  text-align:center;
+  transition: all 0.2s;
+}
+.button:hover{
+  color:#000000;
+  background-color:#FFFFFF;
+}
+
+@media all and (max-width:30em){
+ .button{
+  display:block;
+  margin:0.4em auto;
+}
+}
 
